--- a/quo/src/Makefile
+++ b/quo/src/Makefile
@@ -5,15 +5,47 @@ src=$(shell find .  -name "*.java")
 thirdparty=../dev/3rdparty
 depends=$(thirdparty)/QuoKernel.jar:$(thirdparty)/QuoInstr.jar:$(thirdparty)/UnixUtils.jar:$(thirdparty)/instrumentation.jar:$(thirdparty)/jacorb.jar
 
+pkg=org.cougaar.lib.quo
+srcdir=org/cougaar/lib/quo
 
-CLASSPATH=$(classes):$(cougaar):$(depends)
+rmic_class=$(pkg).MTInstrumentedInstrumentedServerDelegate_object
+rmic_classfile=$(classes)/$(srcdir)/MTInstrumentedInstrumentedServerDelegate_object.class
+rmic_javafile=$(srcdir)/MTInstrumentedInstrumentedServerDelegate_object.java
+
+CLASSPATH=$(cougaar):$(depends)
 export CLASSPATH
 
 
-$(jar): $(src)
-	install -d $(classes)
+all: developers
+
+
+# This should be what the standard COUGAAR build script does, more or less
+compile: $(src)
 	javac  -d $(classes) $(src)
+
+
+
+
+# Developers do this
+
+developers: gen $(jar)
+
+gen:
+	cd ../dev; make
+	install -m 777 -d $(classes)
+
+
+$(rmic_classfile): $(srcdir)/MTInstrumented.java
+	rm -f $(rmic_classfile) $(rmic_javafile)
+	rmic $(rmic_class) -keep -d $(classes)
+	mv $(classes)/$(rmic_javafile) $(rmic_javafile)
+
+$(jar): $(src) 
+	javac  -d $(classes) $(src)
+	make $(rmic_classfile)
 	jar cf $(jar) -C $(classes) .
+
+
 
 
 clean:
