--- a/quo/dev/qdl/Makefile
+++ b/quo/dev/qdl/Makefile
@@ -9,6 +9,16 @@ tag=.tag
 
 super=$(qosketroot)/instrumentation
 
+dl_idl=DestinationLink.idl
+dl_files=$(COUGAAR_SRC_PATH)/core/src/org/cougaar/core/mts/DestinationLink.java
+dl_flags := -rmi
+dl_flags += -ifdef COUGAAR_DL
+dl_flags += $(idl2pkg)
+dl_flags += -idl $(dl_idl)
+dl_flags += -interface org.cougaar.core.society.Message
+dl_flags += -interface org.cougaar.core.society.MessageAddress
+dl_flags += -interface java.lang.Class
+
 mt_idl=MT.idl
 
 mt_files=$(COUGAAR_SRC_PATH)/core/src/org/cougaar/core/mts/MT.java
@@ -40,11 +50,17 @@ mt_inst_flags += -interface org.cougaar.lib.quo.Zippy
 
 qdl_flags := --debuglevel=warnings
 qdl_flags += --language=java
-qdl_flags += --middleware=rmi
 qdl_flags += --package=org.cougaar.lib.quo
 qdl_flags += --prefixdir=$(src)
 qdl_flags += $(includes)
 qdl_flags += $(idl2pkg)
+
+rmi_qdl_flags := $(qdl_flags)
+rmi_qdl_flags += --middleware=rmi
+
+aspect_qdl_flags := $(qdl_flags)
+aspect_qdl_flags += --middleware=none
+aspect_qdl_flags += --kernel_middleware=rmi
 
 
 all: build
@@ -58,12 +74,49 @@ $(mt_idl): $(mt_files)
 $(mt_inst_idl): $(mt_inst_files)
 	$(IDLGEN) $(mt_inst_flags) $(mt_inst_files)
 
+$(dl_idl): $(dl_files)
+	$(IDLGEN) $(dl_flags) $(dl_files)
+
 
 # arbitrary generated files, one per csl
 compress := $(src)/$(srcdir)/Compress.java
 diagnose := $(src)/$(srcdir)/Diagnose.java
 logging := $(src)/$(srcdir)/Logging.java
 instserver := $(src)/$(srcdir)/MTInstrumentedServerAdapter.java
+
+remotessl=$(src)/$(srcdir)/RemoteSSL.java
+remotessladapter=$(src)/$(srcdir)/DestinationLinkRemoteSSLAdapter.java
+
+# Qosket and contract
+$(remotessl): RemoteSSL.idl RemoteSSL.cdl $(mt_idl) $(dl_idl)
+	$(QUOGEN) \
+	--target=client \
+	--cdl=RemoteSSL.cdl \
+	--idl=$(mt_idl) \
+	--idl=$(dl_idl) \
+	--idl=RemoteSSL.idl \
+	--idl=quo.idl \
+	--adapterqosket=org::cougaar::lib::quo::RemoteSSLQosket \
+	--delegateqosket=org::cougaar::lib::quo::RemoteSSLDelegateQosket \
+	$(rmi_qdl_flags)
+
+# Adapter and delegate
+$(remotessladapter): $(remotessl) RemoteSSL.asl
+	$(QUOGEN) \
+	--target=client \
+	--cdl=RemoteSSL.cdl \
+	--idl=$(mt_idl) \
+	--idl=$(dl_idl) \
+	--idl=RemoteSSL.idl \
+	--idl=quo.idl \
+	--business=org::cougaar::core::mts::DestinationLink \
+	--adapterqosket=org::cougaar::lib::quo::RemoteSSLQosket \
+	--delegateqosket=org::cougaar::lib::quo::RemoteSSLDelegateQosket \
+	--qosketimpl=org.cougaar.lib.quo.RemoteSSLQosketImpl \
+	--adapter=DestinationLinkRemoteSSLAdapter \
+	--asl=RemoteSSL.asl \
+	$(aspect_qdl_flags)
+
 
 
 
@@ -85,7 +138,7 @@ $(diagnose): $(mt_idl) $(mt_inst_idl)  Qosket.idl Diagnose.asl
 	--asl=DiagnoseInst.asl \
 	--asl=Diagnose.asl \
 	--properties=$(super)/qdl/InstrumentationDerivedRmi.prop \
-	${qdl_flags}
+	${rmi_qdl_flags}
 
 $(compress): $(mt_idl) $(mt_inst_idl)  Qosket.idl Compress.asl
 	$(QUOGEN)  \
@@ -100,7 +153,7 @@ $(compress): $(mt_idl) $(mt_inst_idl)  Qosket.idl Compress.asl
 	--adapterqosket=org::cougaar::lib::quo::CompressQosket \
 	--delegateqosket=org::cougaar::lib::quo::CompressDelegateQosket \
 	--asl=Compress.asl \
-	${qdl_flags}
+	${rmi_qdl_flags}
 
 
 $(logging):$(mt_idl) $(mt_inst_idl)  Qosket.idl Logging.asl 
@@ -115,7 +168,7 @@ $(logging):$(mt_idl) $(mt_inst_idl)  Qosket.idl Logging.asl
 	--qosketimpl=org.cougaar.lib.quo.LoggingQosketImpl \
 	--adapterqosket=org::cougaar::lib::quo::LoggingQosket \
 	--asl=Logging.asl \
-	${qdl_flags}
+	${rmi_qdl_flags}
 
 
 
@@ -134,11 +187,11 @@ $(instserver): $(mt_idl) $(mt_inst_idl) Qosket.idl InstrumentedServer.asl Server
 	--asl=$(qosketroot)/instrumentation/qdl/SimpleInstrumentedServerTemplate.asl \
 	--asl=InstrumentedServer.asl \
 	--asl=Server.asl \
-	${qdl_flags}
+	${rmi_qdl_flags}
 
 
 
-$(tag): $(logging) $(diagnose)  $(compress) $(instserver)
+$(tag): $(logging) $(diagnose)  $(compress) $(instserver) $(remotessladapter)
 	touch $(tag)
 
 clean:
