Moved all the properties frm SSLNode to this property file

--- a/quo/test/configs/ssl.props
+++ b/quo/test/configs/ssl.props
@@ -1,6 +1,12 @@
+org.cougaar.message.protocol.classes=org.cougaar.core.mts.SSLRMILinkProtocol,org.cougaar.core.mts.LoopbackLinkProtocol
+
+javax.net.ssl.trustStore=$HOME/keystore
+javax.net.ssl.trustStorePassword=password 
+javax.net.ssl.keyStore=$HOME/keystore
+javax.net.ssl.keyStorePassword=password
+org.cougaar.message.transport.debug=policy
+
 org.cougaar.lib.quo.kernel.config=/home/psharma/cougaar/cougaar_HEAD/quo/test/configs/kernel.conf
 org.cougaar.lib.quo.kernel.gui=true
 org.cougaar.message.transport.aspects=org.cougaar.lib.quo.RemoteSSLAspect
-org.cougaar.message.protocol.classes=org.cougaar.core.mts.SSLRMILinkProtocol,org.cougaar.core.mts.RMILinkProtocol,org.cougaar.core.mts.LoopbackLinkProtocol
-org.cougaar.message.transport.debug=policy
 #org.cougaar.lib.quo.UseSSL=true
