--- a/quo/test/configs/adaptdemo.props
+++ b/quo/test/configs/adaptdemo.props
@@ -10,7 +10,7 @@ org.cougaar.message.protocol.classes=org.cougaar.core.mts.SSLRMILinkProtocol,org
 org.cougaar.message.transport.aspects=org.cougaar.lib.quo.QuoProxyAspect,org.cougaar.lib.quo.RemoteSSLAspect,org.cougaar.lib.quo.TrafficMaskAspect
 
 # Debug
-org.cougaar.message.transport.debug=true
+org.cougaar.message.transport.debug=none
 
 
 # Compression
