Cougaar 9.0 repackaging changes

--- a/quo/dev/qdl/Makefile
+++ b/quo/dev/qdl/Makefile
@@ -23,8 +23,8 @@ dl_flags := -rmi
 dl_flags += -ifdef COUGAAR_DL
 dl_flags += $(idl2pkg)
 dl_flags += -idl $(dl_idl)
-dl_flags += -interface org.cougaar.core.society.Message
-dl_flags += -interface org.cougaar.core.society.MessageAddress
+dl_flags += -interface org.cougaar.core.mts.Message
+dl_flags += -interface org.cougaar.core.mts.MessageAddress
 dl_flags += -interface java.lang.Class
 dl_flags += -interface java.lang.Object
 
@@ -37,8 +37,8 @@ mt_flags := -rmi
 mt_flags += -ifdef COUGAAR_MT
 mt_flags += $(idl2pkg)
 mt_flags += -idl $(mt_idl)
-mt_flags += -interface org.cougaar.core.society.Message
-mt_flags += -interface org.cougaar.core.society.MessageAddress
+mt_flags += -interface org.cougaar.core.mts.Message
+mt_flags += -interface org.cougaar.core.mts.MessageAddress
 
 
 
@@ -53,8 +53,8 @@ mt_inst_flags += $(idl2pkg)
 mt_inst_flags += -include "quo.idl"
 mt_inst_flags += -include "quo_instr.idl"
 mt_inst_flags += -idl $(mt_inst_idl)
-mt_inst_flags += -interface org.cougaar.core.society.Message
-mt_inst_flags += -interface org.cougaar.core.society.MessageAddress
+mt_inst_flags += -interface org.cougaar.core.mts.Message
+mt_inst_flags += -interface org.cougaar.core.mts.MessageAddress
 mt_inst_flags += -interface org.cougaar.lib.quo.Zippy
 
 
