--- a/quo/bin/props/cougaar/adaptdemo.props
+++ b/quo/bin/props/cougaar/adaptdemo.props
@@ -1,6 +1,6 @@
 # RSS/QuO
 # org.cougaar.rss.properties=http://stout.bbn.com/~statusquo/RSS-Property.conf
-org.cougaar.lib.quo.kernel.gui=true
+org.cougaar.lib.quo.kernel.gui=false
 
 #Default Trust
 org.cougaar.node.trustStatus=0
@@ -9,7 +9,7 @@ org.cougaar.node.trustStatus=0
 org.cougaar.message.protocol.classes=org.cougaar.core.mts.SSLRMILinkProtocol,org.cougaar.core.mts.RMILinkProtocol,org.cougaar.core.mts.LoopbackLinkProtocol
 
 # Aspects
-org.cougaar.message.transport.aspects=org.cougaar.core.mts.TrafficMaskingGeneratorAspect,org.cougaar.lib.quo.QuoProxyAspect,org.cougaar.lib.quo.RemoteSSLAspect,org.cougaar.lib.quo.TrafficMaskAspect,org.cougaar.core.mts.ForwardMessageLoggingAspect
+org.cougaar.message.transport.aspects=org.cougaar.core.mts.TrafficMaskingGeneratorAspect,org.cougaar.lib.mquo.QuoProxyAspect,org.cougaar.lib.mquo.RemoteSSLAspect,org.cougaar.lib.mquo.TrafficMaskAspect,org.cougaar.core.mts.ForwardMessageLoggingAspect
 
 # Debug
 #org.cougaar.message.transport.debug=traffic_masking_generator
@@ -18,7 +18,7 @@ org.cougaar.message.transport.debug=service
 
 # Compression
 #org.cougaar.lib.quo.UseCompression=true
-org.cougaar.lib.quo.wrapper=org.cougaar.lib.quo.CompressWrapper
+org.cougaar.lib.quo.wrapper=org.cougaar.lib.mquo.CompressWrapper
 
 
 # RemoteSSL
