--- a/quo/bin/props/cougaar/traffic.props
+++ b/quo/bin/props/cougaar/traffic.props
@@ -1,4 +1,6 @@
- org.cougaar.lib.quo.UseMasking=true
-org.cougaar.lib.quo.kernel.gui=true
+org.cougaar.message.trafficGenerator.requestPeriod=3000
+#org.cougaar.lib.quo.UseMasking=true
+org.cougaar.lib.quo.kernel.gui=false
 org.cougaar.message.transport.aspects=org.cougaar.lib.mquo.TrafficMaskAspect,org.cougaar.core.mts.TrafficMaskingGeneratorAspect
 org.cougaar.message.transport.debug=traffic_masking_generator
+# org.cougaar.thread.running.max=1
