--- a/quo/bin/props/cougaar/adaptdemo.props
+++ b/quo/bin/props/cougaar/adaptdemo.props
@@ -1,6 +1,6 @@
 # RSS/QuO
 # org.cougaar.rss.properties=http://stout.bbn.com/~statusquo/RSS-Property.conf
-org.cougaar.lib.quo.kernel.gui=false
+org.cougaar.lib.quo.kernel.gui=true
 
 #Default Trust
 org.cougaar.node.trustStatus=0
@@ -12,8 +12,11 @@ org.cougaar.message.protocol.classes=org.cougaar.core.mts.SSLRMILinkProtocol,org
 org.cougaar.message.transport.aspects=org.cougaar.core.mts.TrafficMaskingGeneratorAspect,org.cougaar.lib.mquo.QuoProxyAspect,org.cougaar.lib.mquo.RemoteSSLAspect,org.cougaar.lib.mquo.TrafficMaskAspect,org.cougaar.core.mts.ForwardMessageLoggingAspect
 
 # Debug
-#org.cougaar.message.transport.debug=traffic_masking_generator
-org.cougaar.message.transport.debug=service
+org.cougaar.message.transport.debug=traffic_masking_generator
+#org.cougaar.message.transport.debug=service
+
+# Thread scheduling
+org.cougaar.thread.running.max=1
 
 
 # Compression
