*** empty log message ***

--- a/quo/Makefile
+++ b/quo/Makefile
@@ -2,7 +2,7 @@ classes=.classes
 jar=newquo.jar
 #cougaar=${COUGAAR_INSTALL_PATH}/lib/core.jar
 cougaar=${COUGAAR_SRC_PATH}/core/src/org/cougaar/core/newcore.jar
-qos=${COUGAAR_SRC_PATH}/qos/src/org/cougaar/core/qos.jar
+qos=${COUGAAR_SRC_PATH}/qos/newqos.jar
 src=$(shell find .  -name "*.java")
 thirdparty=dev/3rdparty
 depends=$(thirdparty)/QuoKernel.jar:$(thirdparty)/QuoRSS.jar:$(thirdparty)/QuoInstr.jar:$(thirdparty)/UnixUtils.jar:$(thirdparty)/instrumentation.jar:$(thirdparty)/jacorb.jar
