*** empty log message ***

--- a/qos/Makefile
+++ b/qos/Makefile
@@ -6,17 +6,22 @@ CLASSPATH=${COUGAARJAR}:${COUGAAR3RDPARTY}/QuoRSS.jar:${COUGAAR3RDPARTY}/QuoKern
 #CLASSPATH=${COUGAAR_INSTALL_PATH}/lib/core.jar:${QUO_ROOT}/lib/quoSumo.jar
 
 export CLASSPATH
+srcdir=src/org/cougaar/core/qos/rss
+src=$(srcdir)/*.java
 
-src := src/org/cougaar/core/qos/rss/*.java
-
-jar := newqos.jar
+jar=newqos.jar
 
 all: $(jar)
 
 
+$(srcdir)/MetricSCTie_Stub.java: $(srcdir)/MetricSCTie.java
+	javac -d . $(src) 
+	rmic -d . -keep org.cougaar.core.qos.rss.MetricSCTie
+	touch $(srcdir)/MetricSCTie_Stub.java
+
+
 $(jar):  $(src) 
 	javac -d . $(src) 
-	rmic -d . org.cougaar.core.qos.rss.MetricSCTie
 	jar cf $(jar) org
 
 
